--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
+    "@remix-run/eslint-config": "^1.2.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.1.2"
   },
@@ -33,6 +38,9 @@
     "dev": "pm2-dev config/pm2.config.js",
     "dev:css": "tailwindcss -o ./app/styles/tailwind.css --watch",
     "dev:app": "remix dev",
-    "start": "cross-env NODE_ENV=production remix-serve build"
+    "start": "cross-env NODE_ENV=production remix-serve build",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\"",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext js,jsx,ts,tsx .",
+    "typecheck": "tsc -b"
   }
 }
