--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@remix-run/react": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
+    "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "pm2": "^5.2.0",
     "react": "^17.0.2",
