--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
@@ -42,6 +43,7 @@
     "start": "cross-env NODE_ENV=production remix-serve build",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\"",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext js,jsx,ts,tsx .",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "prepare": "husky install"
   }
 }
